tests/integration/tests/maven-projects/test-failures/moduleB/src/main/java/ch/hortis/sonar/samples/compileFailures/moduleB/ClassB.java
package ch.hortis.sonar.samples.compileFailures.moduleB;

public class ClassB {
	
	public void right() {
		int i=2;
	}
	
}